--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -255,7 +255,7 @@
 % -------------------------------------------------------------------------------
 \title{\longtitle}
 
-% \includeonly{bibliography}
+% \includeonly{background}
 
 \begin{document}
 \chapterstyle{hangnum}
